<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">哈财</string>
    <string name="home">首页</string>
    <string name="financial">理财</string>
    <string name="myaccount">我的账户</string>
    <string name="more">更多</string>
    <string name="dollar">¥</string>
    <string name="click_exit">再按一次退出程序</string>
    <string name="splash_experience_now">立即体验</string>
    <string name="comfirm">确认</string>
    <string name="cancel">取消</string>
    <string name="login_start">立即登录</string>
    <string name="login_out">退出登录</string>
    <string name="register_start">立即注册</string>
    <string name="login_account">请输入手机号码</string>
    <string name="phone">手机</string>
    <string name="phone_num_1">手机号: </string>
    <string name="phone_input">输入手机号码</string>
    <string name="code">验证码</string>
    <string name="code_input">输入验证码</string>
    <string name="password">密码</string>
    <string name="password_new">新密码</string>
    <string name="password_input">8-16位字母数字组合</string>
    <string name="password_comfire">确认密码</string>
    <string name="password_comfire_input">请再次输入密码</string>
    <string name="command">推荐人</string>
    <string name="command_input">推荐人手机号或邀请码（选填）</string>
    <string name="login_account_pwd">请输入密码</string>
    <string name="login_register_now">快速注册</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_register">注册</string>
    <string name="get_register_code">获取验证码</string>
    <string name="get_register_code_again">重新获取</string>
    <string name="agrement">同意</string>
    <string name="agrement_hacai">《哈财注册服务协议》</string>
    <string name="agrement_hacai_bind">《哈财绑卡协议》</string>
    <string name="splash_count_down_timer">跳过<xliff:g id="num">%1$1d</xliff:g>s</string>
    <string name="forget_login_password">忘记登录密码</string>
    <string name="next">下一步</string>
    <string name="panic_buying">抢购</string>
    <string name="immediate_buy">立即抢购</string>
    <string name="product_buying">火热认购中</string>
    <string name="product_buying_hot">热售中</string>
    <string name="product_sold_out">已售罄</string>
    <string name="product_repayment">已还款</string>
    <string name="year_rate_expect">预期年化利率</string>
    <string name="payment_method">一次性还本付息</string>
    <string name="deadline">期限</string>
    <string name="available_investment">可投</string>
    <string name="myaccount_total_money">资产总额（元）</string>
    <string name="myaccount_available_money">账户余额</string>
    <string name="myaccount_available_money_1">账户余额: </string>
    <string name="myaccount_expect_money">预期收益</string>
    <string name="myaccount_expect_money_assets">待收资产</string>
    <string name="myaccount_expect_money_1">预期收益:</string>
    <string name="myaccount_withdrawals">提现</string>
    <string name="myaccount_recharge">充值</string>
    <string name="service_phone">服务热线： 0571-8526-5038</string>
    <string name="service_phone_num">057185265038</string>
    <string name="work_time_limit">周一至周五 9:00-18:00</string>
    <string name="product_total_money">项目总额</string>
    <string name="product_deadline">理财期限</string>
    <string name="product_investment_money">起投金额</string>
    <string name="investment_cycle">投资周期</string>
    <string name="buy">购买</string>
    <string name="start_interest">开始计息</string>
    <string name="interest_end_time">到期日</string>
    <string name="interest_arrival">本息到账</string>
    <string name="product_buy">立即购买</string>
    <string name="person_settings">个人信息</string>
    <string name="add_bank_card">请添加银行卡</string>
    <string name="bank_card_manager">银行卡管理</string>
    <string name="select_bank_channel">请选择开户银行</string>
    <string name="login_old_pwd">原密码</string>
    <string name="login_old_pwd_input">输入原密码</string>
    <string name="exchange_old_pwd_input">输入6位数字旧密码</string>
    <string name="login_new_pwd">新密码</string>
    <string name="login_new_pwd_input">输入新密码</string>
    <string name="exchange_new_pwd_input">输入6位数字新密码</string>
    <string name="change_login_pwd">修改登录密码</string>
    <string name="change_exchange_pwd">修改交易密码</string>
    <string name="change_login_pwd_notice">区分大小写，登录密码为8-16位数字或字母</string>
    <string name="submit">提交</string>
    <string name="finish">完成</string>
    <string name="identity_information">身份信息</string>
    <string name="real_name">真实姓名</string>
    <string name="real_name_input">请输入真实姓名</string>
    <string name="identity_num">证件账号</string>
    <string name="identity_num_input">请输入证件号码</string>
    <string name="bind_bank_card_num">银行卡号</string>
    <string name="bind_bank_card_num_input">请输入银行卡号</string>
    <string name="bind_bank_card">绑定银行卡</string>
    <string name="bind_card_account_bank">开户银行</string>
    <string name="bind_bank_reserved_information">预留信息</string>
    <string name="reserved_information_phone">预留手机号</string>
    <string name="reserved_information_phone_input">请输入银行预留手机号</string>
    <string name="reserved_information_code">短信验证码</string>
    <string name="reserved_information_code_1">短信验证</string>
    <string name="reserved_information_code_input">输入验证码</string>
    <string name="open_payment_account">开通支付账户</string>
    <string name="open_payment_bank_channel">选择开户银行</string>
    <string name="expect_money">代收本金(元)</string>
    <string name="expect_interest_money">预期待收收益(元)</string>
    <string name="investment_recode">投资记录</string>
    <string name="investment_recodeing">投资中</string>
    <string name="investment_recode_money_back">回款中</string>
    <string name="investment_recode_finish">已完成</string>
    <string name="investment_money">投资金额</string>
    <string name="investment_profit">到期收益</string>
    <string name="investment_repayment_date">投资日期</string>
    <string name="capital_recode">资金记录</string>
    <string name="capital_detail">资金明细</string>
    <string name="recharge_recode">充值记录</string>
    <string name="withdraw_recode">提现记录</string>
    <string name="program_summary">项目概述</string>
    <string name="program_capital_ensure">资金保障</string>
    <string name="program_bid_recode">投标记录</string>
    <string name="investment_person_num">投资人数：</string>
    <string name="investment_person">投资人</string>
    <string name="investment_money_total">投资总额：</string>
    <string name="deal_success">操作成功</string>
    <string name="i_know">朕知道了</string>
    <string name="payment_money">购买金额</string>
    <string name="setting_exchange_pwd">设置交易密码</string>
    <string name="exchange_pwd">交易密码</string>
    <string name="exchange_pwd_input">输入6位数字密码</string>
    <string name="exchange_pwd_input_again">确认6位数字密码</string>
    <string name="exchange_pwd_forget">忘记交易密码</string>
    <string name="exchange_pwd_new">新交易密码</string>
    <string name="risk_assessment">风险评估</string>
    <string name="investment_immediately">立即投资</string>
    <string name="payment_dialog_title">请输入交易密码</string>
    <string name="payment_dialog_cancle">取消</string>
    <string name="payment_dialog_comfirm">确认</string>
    <string name="no_login_register">登录/注册</string>
    <string name="bink_bankcard">绑定银行卡</string>
    <string name="investment_notice">投资有风险，理财需谨慎</string>
    <string name="input_money">输入金额</string>
    <string name="input_money_withDraw">输入提现金额</string>
    <string name="with_draw_describe_notice">您当月已提现次数为<xliff:g id="num">%1$1d</xliff:g>次，已到达或超过收费提现次数<xliff:g id="num">%1$1d</xliff:g>次，故收取手续费<xliff:g id="num">%1$1s</xliff:g>元</string>
    <string name="upgrade_notice">有新版本需要升级，是否升级？</string>
    <string name="upgrade_focuse">正在升级,请稍后...</string>

    <string name="no_more_data">没有更多数据了</string>
    <string name="data_error_try">加载失败，请重试</string>
    <string name="data_empty_try">暂时没有记录</string>
    <string name="pull_to_refresh_1">加载中…</string>
    <string name="pull_to_refresh_2">松开刷新</string>
    <string name="pull_to_refresh_3">下拉刷新</string>

    <string name="push_to_refresh_2">松开加载更多</string>
    <string name="push_to_refresh_3">上拉加载更多</string>

    <string name="acount_unbind_card">请先绑定银行卡</string>
</resources>
