<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/forget_exchange_pwd_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/line_color"
    android:orientation="vertical">

    <include layout="@layout/common_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y50"
        android:layout_marginTop="@dimen/y10"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        android:paddingStart="@dimen/x20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/phone_num_1"
            android:textColor="@color/edittext_color"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:id="@+id/forget_exchange_pwd_phone_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/x5"
            android:text="13666664567"
            android:textColor="@color/edittext_color"
            android:textSize="@dimen/text_size_14" />
    </LinearLayout>

    <View style="@style/common_edit_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y50"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/x20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code"
            android:textColor="@color/text_normal_color"
            android:textSize="@dimen/text_size_14" />

        <EditText
            android:id="@+id/forget_exchange_pwd_item_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x44"
            android:layout_weight="1"
            android:background="@null"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:hint="@string/code_input"
            android:inputType="number"
            android:maxLines="1"
            android:textColorHint="@color/edittext_color_hint"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:id="@+id/forget_exchange_pwd_code_tv"
            android:layout_width="@dimen/x80"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/x20"
            android:gravity="center"
            android:text="@string/get_register_code"
            android:textColor="@color/bt_start_color"
            android:textSize="@dimen/text_size_14" />
    </LinearLayout>

    <Button
        android:id="@+id/forget_exchange_pwd_next_bt"
        style="@style/common_button"
        android:layout_marginTop="@dimen/y30"
        android:shadowColor="@color/bt_start_color"
        android:text="@string/next" />
</LinearLayout>