<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/line_color"
    android:orientation="vertical">

    <include layout="@layout/common_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:paddingStart="@dimen/x20">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/y44"
            android:layout_marginTop="@dimen/y10"
            android:background="@color/colorWhite"
            android:gravity="center_vertical"
            android:text="@string/identity_information"
            android:textColor="@color/edittext_color"
            android:textSize="@dimen/text_size_14"
            android:textStyle="bold" />

        <include
            android:id="@+id/bind_card_name_ll"
            layout="@layout/common_edit_item" />

        <include
            android:id="@+id/bind_card_identy_num_ll"
            layout="@layout/common_edit_item" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y10"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:paddingStart="@dimen/x20">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/y44"
            android:layout_marginTop="@dimen/y10"
            android:background="@color/colorWhite"
            android:gravity="center_vertical"
            android:text="@string/bind_bank_card"
            android:textColor="@color/edittext_color"
            android:textSize="@dimen/text_size_14"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/bind_card_channel_rl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y50">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:text="@string/bind_card_account_bank"
                android:textColor="@color/edittext_color"
                android:textSize="@dimen/text_size_14" />

            <TextView
                android:id="@+id/bind_card_accoun_channel_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/x30"
                android:layout_marginStart="@dimen/x87"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/select_bank_channel"
                android:maxLines="1"
                android:textColorHint="@color/edittext_color_hint"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/text_size_14" />

            <ImageView
                android:id="@+id/bind_card_accoun_channel_iv"
                android:layout_width="@dimen/x10"
                android:layout_height="@dimen/y18"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/x20"
                android:src="@mipmap/icon_arrow" />
        </RelativeLayout>

        <include
            android:id="@+id/bind_card_num_ll"
            layout="@layout/common_edit_item" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y10"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:paddingStart="@dimen/x20">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/y44"
            android:layout_marginTop="@dimen/y10"
            android:background="@color/colorWhite"
            android:gravity="center_vertical"
            android:text="@string/bind_bank_reserved_information"
            android:textColor="@color/edittext_color"
            android:textSize="@dimen/text_size_14"
            android:textStyle="bold" />

        <include
            android:id="@+id/bind_card_reserved_phone_ll"
            layout="@layout/common_edit_item" />

        <include
            android:id="@+id/bind_card_reserved_code_ll"
            layout="@layout/common_edit_item" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x20"
        android:layout_marginTop="@dimen/y10"
        android:text="@string/change_login_pwd_notice"
        android:textColor="@color/bt_start_color"
        android:textSize="@dimen/text_size_12" />

    <Button
        android:id="@+id/bind_card_next_bt"
        style="@style/common_button"
        android:layout_marginTop="@dimen/y25"
        android:shadowColor="@color/edittext_color_hint"
        android:text="@string/next" />
</LinearLayout>