<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/login_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/common_header" />

        <ImageView
            android:layout_width="@dimen/x116"
            android:layout_height="@dimen/y116"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/y100"
            android:scaleType="fitXY"
            android:src="@mipmap/img_login_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y26"
            android:layout_marginTop="@dimen/y83"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/x26"
                android:layout_height="@dimen/y26"
                android:layout_marginStart="@dimen/x60"
                android:src="@mipmap/login_icon_name" />

            <EditText
                android:id="@+id/login_account_et"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/x5"
                android:layout_marginStart="@dimen/x22"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/login_account"
                android:inputType="number"
                android:maxLength="11"
                android:maxLines="1"
                android:textColorHint="@color/edittext_color_hint"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/text_size_14" />
        </LinearLayout>

        <View
            style="@style/common_edit_line"
            android:layout_width="@dimen/x255"
            android:layout_marginTop="@dimen/y8" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y26"
            android:layout_marginTop="@dimen/y25"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/x26"
                android:layout_height="@dimen/y26"
                android:layout_marginStart="@dimen/x60"
                android:src="@mipmap/login_icon_password" />

            <EditText
                android:id="@+id/login_account_pwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/x5"
                android:layout_marginStart="@dimen/x22"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/login_account_pwd"
                android:inputType="numberPassword|textPassword"
                android:maxLength="18"
                android:maxLines="1"
                android:textColorHint="@color/edittext_color_hint"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/text_size_14" />
        </LinearLayout>

        <View
            style="@style/common_edit_line"
            android:layout_width="@dimen/x255"
            android:layout_marginTop="@dimen/y8" />

        <Button
            android:id="@+id/login_start_bt"
            style="@style/common_button"
            android:layout_marginTop="@dimen/y30"
            android:shadowColor="@color/edittext_color_hint"
            android:text="@string/login_start" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y25"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/login_register_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_register_now"
                android:textColor="@color/text_normal_color"
                android:textSize="@dimen/text_size_14" />

            <TextView
                android:id="@+id/login_forgetpassword_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/x35"
                android:text="@string/login_forget_password"
                android:textColor="@color/text_normal_color"
                android:textSize="@dimen/text_size_14" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>