<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="@dimen/y56"
              android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y0.5"
        android:background="@color/text_normal_hint_color"/>

    <LinearLayout
        android:id="@+id/ll_home"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y55"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView

                android:id="@+id/iv_home"
                android:layout_width="@dimen/x22"
                android:layout_height="@dimen/y22"
                android:src="@mipmap/tabbar_icon_home"/>

            <TextView
                android:id="@+id/tv_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y3"
                android:text="@string/home"
                android:textColor="@color/home_button_unselected"
                android:textSize="@dimen/text_size_12"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_product"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_product"
                android:layout_width="@dimen/x22"
                android:layout_height="@dimen/y22"
                android:src="@mipmap/tabbar_icon_licai"/>

            <TextView
                android:id="@+id/tv_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y3"
                android:text="@string/financial"
                android:textColor="@color/home_button_unselected"
                android:textSize="@dimen/text_size_12"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_myAccount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_myAccount"
                android:layout_width="@dimen/x22"
                android:layout_height="@dimen/y22"
                android:src="@mipmap/tabbar_icon_account"/>

            <TextView
                android:id="@+id/tv_myAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y3"
                android:text="@string/myaccount"
                android:textColor="@color/home_button_unselected"
                android:textSize="@dimen/text_size_12"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_more"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_more"
                android:layout_width="@dimen/x22"
                android:layout_height="@dimen/y22"
                android:src="@mipmap/tabbar_icon_more"/>

            <TextView
                android:id="@+id/tv_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y3"
                android:text="@string/more"
                android:textColor="@color/home_button_unselected"
                android:textSize="@dimen/text_size_12"/>
        </LinearLayout>


    </LinearLayout>
</LinearLayout>
