<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/common_header" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/y10" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:orientation="vertical"
            android:paddingStart="@dimen/x20">

            <include
                android:id="@+id/register_phone_ll"
                layout="@layout/common_edit_item" />

            <include
                android:id="@+id/register_code_ll"
                layout="@layout/common_edit_item" />

            <include
                android:id="@+id/register_pwd_ll"
                layout="@layout/common_edit_item" />

            <include
                android:id="@+id/register_pwd_again_ll"
                layout="@layout/common_edit_item" />

            <include
                android:id="@+id/register_pwd_command_ll"
                layout="@layout/common_edit_item"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/register_agreement_read_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x20"
            android:layout_marginTop="@dimen/y15"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/register_agreement_iv"
                android:layout_width="@dimen/x18"
                android:layout_height="@dimen/y18"
                android:scaleType="fitXY"
                android:src="@mipmap/icon_box_unsel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/x10"
                android:text="@string/agrement"
                android:textColor="@color/toast_backgrounde"
                android:textSize="@dimen/text_size_13" />

            <TextView
                android:id="@+id/register_agreement_read_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/x8"
                android:text="@string/agrement_hacai"
                android:textColor="@color/bt_end_color"
                android:textSize="@dimen/text_size_13" />
        </LinearLayout>

        <Button
            android:id="@+id/register_start_bt"
            style="@style/common_button"
            android:layout_marginTop="@dimen/y30"
            android:shadowColor="@color/bt_start_color"
            android:text="@string/register_start" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>